# jWebGPU

./: .gitignore  AGENTS.md  README.md  app.js  build.gradle.kts  gradle.properties  index.html  privacy-policy.md  publish.gradle.kts  settings.gradle.kts
webgpu/: CMakeLists.txt  build.gradle.kts
webgpu/android/jni/: build.gradle.kts
webgpu/base/: build.gradle.kts
webgpu/builder/: build.gradle.kts
webgpu/builder/src/main/cpp/: jWebGPU.idl
webgpu/builder/src/main/cpp/custom/: IDLCustomCode.h  jWebGPU.cpp  jWebGPU.h
webgpu/core/: build.gradle.kts
webgpu/dawn/: build.gradle.kts
webgpu/desktop/c/: build.gradle.kts
webgpu/desktop/ffm/: build.gradle.kts
webgpu/desktop/jni/: build.gradle.kts
webgpu/download/: build.gradle.kts
webgpu/shared/c/: build.gradle.kts
webgpu/shared/jni/: build.gradle.kts
webgpu/web/wasm/: build.gradle.kts
webgpu/webgpu-android/: build.gradle.kts
webgpu/webgpu-base/: build.gradle.kts
webgpu/webgpu-build/: build.gradle.kts
webgpu/webgpu-build/src/main/cpp/: jWebGPU.idl
webgpu/webgpu-build/src/main/java/: Build.java  WGPUBuild.java
webgpu/webgpu-core/: build.gradle.kts
webgpu/webgpu-dawn/: build.gradle.kts
webgpu/webgpu-desktop/: build.gradle.kts
webgpu/webgpu-desktop-ffm/: build.gradle.kts
webgpu/webgpu-desktop-jni/: build.gradle.kts
webgpu/webgpu-download/: build.gradle.kts
webgpu/webgpu-ffm/: build.gradle.kts
webgpu/webgpu-jni/: build.gradle.kts
webgpu/webgpu-teavm/: build.gradle.kts
webgpu/webgpu-web/: build.gradle.kts
webgpu/webgpu-wgpu/: build.gradle.kts
(+1482 files in other folders)
